<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="interest_options">
        <item>Horse Riding</item>
        <item>Cooking Cakes</item>
        <item>Soccer</item>
        <item>Painting</item>
        <item>Playing Guitar</item>
        <item>Playing Chess</item>
        <item>Eating IceCream</item>
        <item>Watch Movies</item>
        ...
    </string-array>
    <string name="app_name">Keep Touch</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_event">Add new event</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="zvalidations_not_positive_integer">Field should be positive integer</string>
    <string name="email_not_match">Emails don\'t match</string>
    <string name="zvalidations_empty">Field could not be empty</string>
    <string name="zvalidations_not_in_range">Field should be between %1$d and %2$d</string>
    <string name="zvalidations_not_email">Value is not valid email address</string>
    <string name="zvalidations_already_registered">That email is already registered.Did
        you mean to log in?</string>
    <string name="menu_crouton_validation_failed_renderer">Crouton</string>
    <string name="signup"><![CDATA[<u>Sign up</u>]]></string>
    <string name="edit_event">Edit event</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_button_text">OK</string>
    <string name="action_friend_picker">Select friends</string>
    <string name="action_location_picker">Select Location</string>
    <string name="button_done">DONE</string>
    <string name="action_search">Select friend</string>
    <string name="myMapKey">AIzaSyCeNSDYa6_O0yVCnZgmR1TAHQtOnpHYoN4</string>
    <string name="password">Password</string>
    <string name="email">Email Address</string>
    <string name="login_without_facebook">Login In</string>
    <string name="ReTypePassword">Re-type password</string>
    <string name="select_location">Select Place</string>
    <string name="justUse">Just use</string>
    <string name="action_choose_location">choose location</string>
    <string name="no_place_chosen">No place was chosen</string>
    <string name="ChooseYourInterests">Choose Your Interests:</string>
    <string name="Search">Search...</string>
    <string name="DidntFindInterst">Didn\'t Find Your Interest?</string>
    <string name="AddNewInterest">Add New Interest:</string>
    <string name="AddYourAddress">Add Your Address:</string>
    <string name="Continue">Continue</string>
    <string name="NewInterestName">New Interest Name..</string>
    <string name="InterestType">Interest Type:</string>
    <string name="Add">Add</string>
    <string name="LetsGetStarted">Let\'s Get Started!</string>
    <string name="textSignUp">Sign UP</string>
    <string name="dontHaveAnAccount">Dont Have An Account?</string>
    <string name="no_friends_chosen">No friend chosen.</string>

</resources>
