<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@id/layout_window_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ChooseYourInterests"
            android:id="@id/LablaChooseYourInterestId"
            android:textSize="45dp"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/DidntFindInterestLable"
            android:layout_alignStart="@+id/DidntFindInterestLable" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DidntFindInterst"
            android:id="@+id/DidntFindInterestLable"
            android:textSize="32dp"
            android:layout_above="@+id/buttonAddNewInterest"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Continue"
            android:id="@+id/buttonContinue"
            android:textSize="25dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/AddNewInterest"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/DidntFindInterestLable"
            android:layout_alignStart="@+id/DidntFindInterestLable" />

        <ImageButton
            android:id="@+id/buttonAddNewInterest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:src="@drawable/btn_plus"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/buttonContinue" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/autoCompleteSearch"
            android:layout_below="@id/LablaChooseYourInterestId"
            android:layout_alignLeft="@id/LablaChooseYourInterestId"
            android:layout_alignStart="@id/LablaChooseYourInterestId"
            android:layout_alignRight="@+id/DidntFindInterestLable"
            android:layout_alignEnd="@+id/DidntFindInterestLable"
            android:hint="Search..."
            android:textSize="30dp" />

    </RelativeLayout>
</LinearLayout>